# brainrot-prog-lang-1

./: .gitignore  CMakeLists.txt  readme.md
examples/: goal.skibidi  test.skibidi
include/: ast.h  codegen.h  lexer.h  parser.h
src/: Lexer.cpp  codegen.cpp  main.cpp  parser.cpp
